4.Cloudinary and Merchant manage Product and add Product

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.mail.username=ullasraju24@gmail.com
 spring.mail.password=louykybgmophqqgz
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+#Cloudinary Properties
+cloudinary.api.name=ecommerce
+cloudinary.api.key=817586139193574
+cloudinary.api.secret=c6Rf2S1yyKHozqd7_Ul3E2BuKjg
